<resources>
    <string name="app_name">Splash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="conversations">Conversations</string>
    <string name="my_account">My account</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="my_name">My name</string>
    <string name="my_bio">My Bio</string>
    <string name="profile_picture">Profile picture</string>
    <string name="how_to_change_dp">Click below to change profile picture</string>
    <string name="experiment_text">A large piece of text for experiment. Just to see how the layout looks with so many words in it. The text is being stretched to live up to the expectations of the experiment. Do not even read this btw. Not really important.</string>
    <string name="chat_hint">Splash your message here</string>
    <string name="default_notification_channel_id">splash_channel</string>
</resources>